# api-driftabot

./: Makefile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  driftabot.yml  release.yml
action/: check-permissions.sh  cleanup.sh  compare.sh  generate-base.sh  generate-head.sh  install-engine.sh  scan-consumers.sh
docs/: guide.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
drift_agent/: __init__.py
drift_agent/nodes/: notify.py  pr_comment.py
drift_guard_agent/: graph.py  state.py
drift_guard_agent/nodes/: discover.py  notify.py  pr_comment.py
scripts/: detect.sh  generate-base.sh
scripts/generate/: fastapi.sh  go.sh  graphql.sh  grpc.sh  nestjs.sh  openapi.sh
