[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drift-guard-agent"
version = "0.1.0"
description = "LangGraph agent that detects breaking API changes and opens GitHub Issues in affected consumer repos."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["api", "drift", "openapi", "breaking-changes", "github-actions", "langgraph"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph>=0.2",
    "anthropic>=0.50",
    "httpx>=0.27",
    "gitpython>=3.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
drift-guard-agent = "drift_guard_agent.cli:main"

[project.urls]
Homepage = "https://github.com/pgomes13/api-drift-agent"
Repository = "https://github.com/pgomes13/api-drift-agent"
Issues = "https://github.com/pgomes13/api-drift-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["drift_guard_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
