[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-driftabot"
version = "0.1.0"
description = "LangGraph agent that detects breaking API changes and opens GitHub Issues in affected consumer repos."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["api", "drift", "openapi", "breaking-changes", "github-actions", "langgraph"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph>=0.2",
    "anthropic>=0.50",
    "httpx>=0.27",
    "gitpython>=3.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["ruff", "pytest>=8.0", "pytest-httpx>=0.30"]

[project.scripts]
drift-agent = "drift_agent.cli:main"

[project.urls]
Homepage = "https://github.com/DriftaBot/api-driftabot"
Repository = "https://github.com/DriftaBot/api-driftabot"
Issues = "https://github.com/DriftaBot/api-driftabot/issues"

[tool.hatch.build.targets.wheel]
packages = ["drift_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
